# ferda

./: .gitignore  12-9-k-matrix.csv  CMakeCache.txt  CMakeLists.txt  DEMOBarometer.csv  DEMOaccelerometer.csv  DEMOgyroscope.csv  DEMOtvc.csv  LICENSE  Makefile  README.md  TVC.csv  a.out  accelerometer.csv  barometer.csv  cmake_install.cmake  gyroscope.csv  k_matrix.csv  startup.sh  test.cpp  test.py
.github/workflows/: gtest.yml
hardware/: Barometer.cpp  IMU.cpp  Igniter.cpp  RF.cpp  TVC.cpp  Telemetry.cpp
hardware_simulation/: Barometer.cpp  IMU.cpp  Igniter.cpp  RF.cpp  TVC.cpp  UDPClient.hpp
hardware_test/: Barometer.cpp  IMU.cpp  Igniter.cpp  RF.cpp  SimulationManager.cpp  SimulationManager.hpp  TVC.cpp  Telemetry.cpp
hardware_test/simulation/: Usage.md
hardware_test/simulation/MATLAB Drive/simulation_ert_rtw/: ert_main.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h  simulation.h  simulation_b048d748_1.c  simulation_b048d748_1_checkDynamics.c  simulation_b048d748_1_compOutputsDyn.c  simulation_b048d748_1_gateway.h  simulation_b048d748_1_geometries.h  simulation_b048d748_1_mode_zero_crossings.c  simulation_b048d748_1_sim_delegate.c  simulation_types.h  ssc_ml_fun.h
hardware_test/simulation/launch_sim/simulation_ert_shrlib_rtw/: CMakeLists.txt  buildInfo.mat  builtin_typeid_types.h  ert_main.c  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h  simulation.c  simulation.h  simulation_b048d748_1.c  simulation_b048d748_1.h  simulation_b048d748_1_asm_delegate.c  simulation_b048d748_1_asserts.c  simulation_b048d748_1_checkDynamics.c  simulation_b048d748_1_compOutputsDyn.c  simulation_b048d748_1_compOutputsKin.c  simulation_b048d748_1_create.c  simulation_b048d748_1_deriv.c  simulation_b048d748_1_gateway.c  simulation_b048d748_1_gateway.h  simulation_b048d748_1_geometries.c  simulation_b048d748_1_geometries.h  simulation_b048d748_1_logging.c  simulation_b048d748_1_mode_zero_crossings.c  simulation_b048d748_1_setParameters.c  simulation_b048d748_1_sim_delegate.c  simulation_capi.c  simulation_capi.h  simulation_capi_host.h  simulation_data.c  simulation_private.h  simulation_types.h  ssc_ml_fun.h
hardware_test/simulation_ert_rtw/: CMakeLists.txt  buildInfo.mat  rtGetInf.cpp  simulation.cpp  simulation_b048d748_1.h  simulation_b048d748_1_asm_delegate.c  simulation_b048d748_1_asserts.c  simulation_b048d748_1_compOutputsKin.c  simulation_b048d748_1_create.c  simulation_b048d748_1_deriv.c  simulation_b048d748_1_gateway.c  simulation_b048d748_1_geometries.c  simulation_b048d748_1_logging.c  simulation_b048d748_1_setParameters.c  simulation_data.cpp  simulation_private.h
hardware_test/simulation_ert_rtw/html/data/: model.js
include/: Barometer.hpp  Controller.hpp  IMU.hpp  Igniter.hpp  MissionConstants.hpp  Mode.hpp  Navigation.hpp  RF.hpp  State.hpp  TVC.hpp  Telemetry.hpp
logs/: RFlogs.txt  logs.txt
src/: Controller.cpp  Controller_Test.cpp  Main.cpp  Mode.cpp  Navigation.cpp  Navigation_Test.cpp  ReactionWheel.cpp  State.cpp  Telemetry.cpp  k_matrix.csv
(+11 files in other folders)
